--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,9 @@ dependencies {
     //Spring web
     implementation 'org.springframework.boot:spring-boot-starter-web'
 
+    //Spring Validation
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+
     //Spring Data JPA
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     runtimeOnly 'com.h2database:h2'
@@ -55,6 +58,11 @@ dependencies {
     //Spring Dev Tools
     developmentOnly("org.springframework.boot:spring-boot-devtools")
 
+    //DozerMapper
+    implementation 'com.github.dozermapper:dozer-core:6.4.0'
+
+    compileOnly 'org.projectlombok:lombok:1.18.16'
+    annotationProcessor 'org.projectlombok:lombok:1.18.16'
 }
 
 application {
