--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     runtimeOnly 'com.h2database:h2'
 
+    //Spring web
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+
     //Spring Dev Tools
     developmentOnly("org.springframework.boot:spring-boot-devtools")
 
