--- a/app/src/main/resources/application.yml
+++ b/app/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     livereload:
       enabled : true
   datasource:
-    url: jdbc:h2:C:/ljw-study/codesoom/demotask
+    url: jdbc:h2:~/data/demo
     username: sa
   jpa:
     hibernate:
